# OgamePrototype

./: .gitignore  CMakeLists.txt  Map.cpp  Map.hpp  Player.cpp  Player.h  README.md  main.cpp
examples/: quest.cpp
